--- a/index.html
+++ b/index.html
@@ -1,101 +1,234 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Manage landing page</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<title>Frontend Mentor | Manage landing page</title>
+	</head>
+	<body>
+		<header class="header">
+			<div class="container">
+				<nav class="navbar">
+					<img src="./images/logo.svg" alt="logo" class="logo" />
 
-  Pricing
-  Product
-  About Us
-  Careers
-  Community
+					<div class="menu">
+						<a href="" class="menu-item">Pricing</a>
+						<a href="" class="menu-item">Product</a>
+						<a href="" class="menu-item">About Us</a>
+						<a href="" class="menu-item">Careers</a>
+						<a href="" class="menu-item">Community</a>
+					</div>
 
-  Get Started
+					<div class="hamburger">
+						<span class="bar"></span>
+						<span class="bar"></span>
+						<span class="bar"></span>
+					</div>
 
-  Bring everyone together to build better products.
+					<a href="/" class="btn cta btn-primary">Get Started</a>
+				</nav>
 
-  Manage makes it simple for software teams to plan day-to-day 
-  tasks while keeping the larger team goals in view.
+				<!-- banner area -->
+				<div class="banner flex">
+					<div class="banner-info">
+						<h1 class="banner-title title">
+							Bring everyone together to build better products.
+						</h1>
+						<p class="banner-text">
+							Manage makes it simple for software teams to plan day-to-day tasks
+							while keeping the larger team goals in view.
+						</p>
+						<a href="/" class="btn cta btn-primary">Get Started</a>
+					</div>
 
-  Get Started
+					<img
+						src="./images/illustration-intro.svg"
+						alt="banner image"
+						class="banner-img"
+					/>
+				</div>
+			</div>
+		</header>
 
-  What’s different about Manage?
+		<!-- manage services -->
+		<section class="services">
+			<div class="container flex">
+				<div class="services-info">
+					<h2 class="services-info-title title">
+						What’s different about Manage?
+					</h2>
+					<p class="services-info-text">
+						Manage provides all the functionality your team needs, without the
+						complexity. Our software is tailor-made for modern digital product
+						teams.
+					</p>
+				</div>
 
-  Manage provides all the functionality your team needs, without 
-  the complexity. Our software is tailor-made for modern digital 
-  product teams. 
+				<div class="services-details">
+					<!-- card one -->
+					<div class="services-details-card">
+						<div class="services-bar">
+							<span class="services-details-number">01</span>
+							<h3 class="services-details-title title">
+								Track company-wide progress
+							</h3>
+						</div>
 
-  01
-  Track company-wide progress
-  See how your day-to-day tasks fit into the wider vision. Go from 
-  tracking progress at the milestone level all the way done to the 
-  smallest of details. Never lose sight of the bigger picture again.
+						<p class="services-details-text">
+							See how your day-to-day tasks fit into the wider vision. Go from
+							tracking progress at the milestone level all the way done to the
+							smallest of details. Never lose sight of the bigger picture again.
+						</p>
+					</div>
 
-  02
-  Advanced built-in reports
-  Set internal delivery estimates and track progress toward company 
-  goals. Our customisable dashboard helps you build out the reports 
-  you need to keep key stakeholders informed.
+					<!-- card two -->
+					<div class="services-details-card">
+						<div class="services-bar">
+							<span class="services-details-number">02</span>
+							<h3 class="services-details-title title">
+								Advanced built-in reports
+							</h3>
+						</div>
 
-  03
-  Everything you need in one place
-  Stop jumping from one service to another to communicate, store files, 
-  track tasks and share documents. Manage offers an all-in-one team 
-  productivity solution.
+						<p class="services-details-text">
+							Set internal delivery estimates and track progress toward company
+							goals. Our customizable dashboard helps you build out the reports
+							you need to keep key stakeholders informed.
+						</p>
+					</div>
 
-  What they’ve said
+					<!-- card three -->
+					<div class="services-details-card">
+						<div class="services-bar">
+							<span class="services-details-number">03</span>
+							<h3 class="services-details-title title">
+								Everything you need in one place
+							</h3>
+						</div>
 
-  Anisha Li
-  “Manage has supercharged our team’s workflow. The ability to maintain 
-  visibility on larger milestones at all times keeps everyone motivated.”
+						<p class="services-details-text">
+							Stop jumping from one service to another to communicate, store
+							files, track tasks and share documents. Manage offers an
+							all-in-one team productivity solution.
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
 
-  Ali Bravo
-  “We have been able to cancel so many other subscriptions since using 
-  Manage. There is no more cross-channel confusion and everyone is much 
-  more focused.”
+		<!-- testimonials section -->
+		<section class="testimonials">
+			<h2 class="testimonials-title title">What they’ve said</h2>
 
-  Richard Watts
-  “Manage allows us to provide structure and process. It keeps us organized 
-  and focused. I can’t stop recommending them to everyone I talk to!”
+			<div class="cards">
+				<!-- card 1 -->
+				<div class="card">
+					<img src="./images/avatar-anisha.png" alt="Anisha" class="card-img" />
+					<h4 class="card-name">Anisha Li</h4>
+					<p class="card-text">
+						“Manage has supercharged our team’s workflow. The ability to
+						maintain visibility on larger milestones at all times keeps everyone
+						motivated.”
+					</p>
+				</div>
 
-  Shanai Gough
-  “Their software allows us to track, manage and collaborate on our projects 
-  from anywhere. It keeps the whole team in-sync without being intrusive.”
+				<!-- card 2 -->
+				<div class="card">
+					<img src="./images/avatar-ali.png" alt="Ali" class="card-img" />
+					<h4 class="card-name">Ali Bravo</h4>
+					<p class="card-text">
+						“We have been able to cancel so many other subscriptions since using
+						Manage. There is no more cross-channel confusion and everyone is
+						much more focused.”
+					</p>
+				</div>
 
-  Get Started
+				<!-- card 3 -->
+				<div class="card">
+					<img
+						src="./images/avatar-richard.png"
+						alt="Richard"
+						class="card-img"
+					/>
+					<h4 class="card-name">Richard Watts</h4>
+					<p class="card-text">
+						“Manage allows us to provide structure and process. It keeps us
+						organized and focused. I can’t stop recommending them to everyone I
+						talk to!”
+					</p>
+				</div>
 
-  Simplify how your team works today.
-  Get Started
+				<!-- card 4 -->
+				<div class="card">
+					<img src="./images/avatar-shanai.png" alt="Shanai" class="card-img" />
+					<h4 class="card-name">Shanai Gough</h4>
+					<p class="card-text">
+						“Their software allows us to track, manage and collaborate on our
+						projects from anywhere. It keeps the whole team in-sync without
+						being intrusive.”
+					</p>
+				</div>
+			</div>
 
-  Home
-  Pricing
-  Products
-  About Us
-  Careers
-  Community
-  Privacy Policy
+			<a href="/" class="btn cta btn-primary">Get Started</a>
+		</section>
 
-  Updates in your inbox…
-  Go
+		<!-- call to action section -->
+		<section class="cta-section">
+			<div class="container flex">
+				<h2 class="cta-title">Simplify how your team works today.</h2>
+				<a href="" class="btn btn-secondary">Get Started</a>
+			</div>
+		</section>
 
-  Copyright 2020. All Rights Reserved
+		<!-- footer -->
+		<footer class="footer">
+			<div class="container grid">
+				<form class="footer-form">
+					<input
+						type="text"
+						class="form-input"
+						placeholder="Updates in your inbox…"
+					/>
+					<button class="form-btn">Go</button>
+				</form>
 
-  
+				<div class="footer-links-group">
+					<div class="footer-links">
+						<a href="" class="footer-link">Home</a>
+						<a href="" class="footer-link">Pricing</a>
+						<a href="" class="footer-link">Products</a>
+						<a href="" class="footer-link">About Us</a>
+					</div>
+
+					<div class="footer-links">
+						<a href="" class="footer-link">Careers</a>
+						<a href="" class="footer-link">Community</a>
+						<a href="" class="footer-link">Privacy Policy</a>
+					</div>
+				</div>
+
+				<div class="footer-icons"></div>
+
+				<img src="./images/logo.svg" alt="logo" class="footer-logo" />
+
+				<p class="footer-copyright">Copyright 2020. All Rights Reserved</p>
+			</div>
+		</footer>
+
+		<!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  </div> -->
+	</body>
 </html>
