update card divs to blockquotes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <div class="cards">
         <!-- card 1 -->
-        <div class="card">
+        <blockquote class="card">
           <img src="./images/avatar-anisha.png" alt="Anisha" class="card-img" />
           <h4 class="card-name">Anisha Li</h4>
           <p class="card-text">
@@ -139,10 +139,10 @@
             maintain visibility on larger milestones at all times keeps everyone
             motivated.”
           </p>
-        </div>
+        </blockquote>
 
         <!-- card 2 -->
-        <div class="card">
+        <blockquote class="card">
           <img src="./images/avatar-ali.png" alt="Ali" class="card-img" />
           <h4 class="card-name">Ali Bravo</h4>
           <p class="card-text">
@@ -150,10 +150,10 @@
             Manage. There is no more cross-channel confusion and everyone is
             much more focused.”
           </p>
-        </div>
+        </blockquote>
 
         <!-- card 3 -->
-        <div class="card">
+        <blockquote class="card">
           <img
             src="./images/avatar-richard.png"
             alt="Richard"
@@ -165,10 +165,10 @@
             organized and focused. I can’t stop recommending them to everyone I
             talk to!”
           </p>
-        </div>
+        </blockquote>
 
         <!-- card 4 -->
-        <div class="card">
+        <blockquote class="card">
           <img src="./images/avatar-shanai.png" alt="Shanai" class="card-img" />
           <h4 class="card-name">Shanai Gough</h4>
           <p class="card-text">
@@ -176,7 +176,7 @@
             projects from anywhere. It keeps the whole team in-sync without
             being intrusive.”
           </p>
-        </div>
+        </blockquote>
       </div>
 
       <a href="/" class="btn cta btn-primary">Get Started</a>
