--- a/index.html
+++ b/index.html
@@ -37,11 +37,21 @@
 					<img src="./images/logo.svg" alt="logo" class="logo" />
 
 					<ul class="menu">
-						<li><a href="" class="menu-item">Pricing</a></li>
-						<li><a href="" class="menu-item">Product</a></li>
-						<li><a href="" class="menu-item">About Us</a></li>
-						<li><a href="" class="menu-item">Careers</a></li>
-						<li><a href="" class="menu-item">Community</a></li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Pricing</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Product</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">About Us</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Careers</a>
+						</li>
+						<li class="menu-list-item">
+							<a href="" class="menu-item">Community</a>
+						</li>
 					</ul>
 
 					<div class="hamburger">
