--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 				<!-- card 1 -->
 				<blockquote class="card">
 					<img src="./images/avatar-anisha.png" alt="Anisha" class="card-img" />
-					<h4 class="card-name">Anisha Li</h4>
+					<h4 class="card-name title">Anisha Li</h4>
 					<p class="card-text">
 						“Manage has supercharged our team’s workflow. The ability to
 						maintain visibility on larger milestones at all times keeps everyone
@@ -170,7 +170,7 @@
 				<!-- card 2 -->
 				<blockquote class="card">
 					<img src="./images/avatar-ali.png" alt="Ali" class="card-img" />
-					<h4 class="card-name">Ali Bravo</h4>
+					<h4 class="card-name title">Ali Bravo</h4>
 					<p class="card-text">
 						“We have been able to cancel so many other subscriptions since using
 						Manage. There is no more cross-channel confusion and everyone is
@@ -185,7 +185,7 @@
 						alt="Richard"
 						class="card-img"
 					/>
-					<h4 class="card-name">Richard Watts</h4>
+					<h4 class="card-name title">Richard Watts</h4>
 					<p class="card-text">
 						“Manage allows us to provide structure and process. It keeps us
 						organized and focused. I can’t stop recommending them to everyone I
@@ -196,7 +196,7 @@
 				<!-- card 4 -->
 				<blockquote class="card">
 					<img src="./images/avatar-shanai.png" alt="Shanai" class="card-img" />
-					<h4 class="card-name">Shanai Gough</h4>
+					<h4 class="card-name title">Shanai Gough</h4>
 					<p class="card-text">
 						“Their software allows us to track, manage and collaborate on our
 						projects from anywhere. It keeps the whole team in-sync without
