add cta class to btn-secondary

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <section class="cta-section">
       <div class="container flex">
         <h2 class="cta-title">Simplify how your team works today.</h2>
-        <a href="" class="btn btn-secondary">Get Started</a>
+        <a href="" class="btn cta btn-secondary">Get Started</a>
       </div>
     </section>
 
