add links-right & links-left classes to footer links

--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@
         </form>
 
         <div class="footer-links-group">
-          <div class="footer-links">
+          <div class="footer-links links-left">
             <a href="" class="footer-link">Home</a>
             <a href="" class="footer-link">Pricing</a>
             <a href="" class="footer-link">Products</a>
             <a href="" class="footer-link">About Us</a>
           </div>
 
-          <div class="footer-links">
+          <div class="footer-links links-right">
             <a href="" class="footer-link">Careers</a>
             <a href="" class="footer-link">Community</a>
             <a href="" class="footer-link">Privacy Policy</a>
