--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <!-- footer -->
     <footer class="footer">
-      <div class="container grid">
+      <div class="container container-footer grid">
         <form class="footer-form">
           <input
             type="text"
@@ -240,7 +240,11 @@
 
         <div class="footer-icons"></div>
 
-        <img src="./images/logo.svg" alt="logo" class="footer-logo" />
+        <img
+          src="./images/logo.svg"
+          alt="logo"
+          class="footer-logo filter-white"
+        />
 
         <p class="footer-copyright">Copyright 2020. All Rights Reserved</p>
       </div>
