--- a/index.html
+++ b/index.html
@@ -238,7 +238,21 @@
           </div>
         </div>
 
-        <div class="footer-icons"></div>
+        <div class="footer-icons">
+          <a href="#" class="icon">
+            <i class="fab fa-facebook fa-2x"></i>
+          </a>
+          <a href="#" class="icon">
+            <i class="fab fa-youtube fa-2x"></i>
+          </a>
+          <a href="#" class="icon">
+            <i class="fab fa-twitter fa-2x"></i>
+          </a>
+          <a href="#" class="icon">
+            <i class="fab fa-pinterest fa-2x"></i>
+          </a>
+          <a href="#" class="icon"><i class="fab fa-instagram fa-2x"></i> </a>
+        </div>
 
         <img
           src="./images/logo.svg"
