--- a/index.html
+++ b/index.html
@@ -277,6 +277,6 @@
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
 
-    <script src="/script/app.js"></script>
+    <script src="script/app.js"></script>
   </body>
 </html>
