add slider dot  navs

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </p>
 
         <buton class="previous">
-          <span><i class="fas fa-angle-left fa-3x"></i></span>
+          <span><i class="fas fa-angle-left fa-2x"></i></span>
           <span class="sr-only">Previous</span>
         </buton>
 
@@ -222,11 +222,32 @@
         </div>
 
         <buton class="next">
-          <span><i class="fas fa-angle-right fa-3x"></i></span>
+          <span><i class="fas fa-angle-right fa-2x"></i></span>
           <span class="sr-only">Next</span>
         </buton>
 
-        <ul class=""></ul>
+        <ul class="slider-navigation">
+          <li class="">
+            <button class="slider-btn" aria-current="true">
+              <span class="sr-only">Go to slide 1</span>
+            </button>
+          </li>
+          <li>
+            <button class="slider-btn">
+              <span class="sr-only">Go to slide 2</span>
+            </button>
+          </li>
+          <li>
+            <button class="slider-btn">
+              <span class="sr-only">Go to slide 3</span>
+            </button>
+          </li>
+          <li>
+            <button class="slider-btn">
+              <span class="sr-only">Go to slide 4</span>
+            </button>
+          </li>
+        </ul>
       </section>
       <!-- slider -->
 
