--- a/index.html
+++ b/index.html
@@ -62,21 +62,24 @@
 				</nav>
 
 				<!-- banner area -->
-				<div class="banner flex">
+				<div class="banner">
 					<div class="banner-info">
 						<img
 							src="./images/illustration-intro.svg"
 							alt=""
 							class="banner-img"
 						/>
-						<h1 class="banner-title title">
-							Bring everyone together to build better products.
-						</h1>
-						<p class="banner-text">
-							Manage makes it simple for software teams to plan day-to-day tasks
-							while keeping the larger team goals in view.
-						</p>
-						<a href="/" class="btn cta btn-primary">Get Started</a>
+
+						<div class="banner-flex">
+							<h1 class="banner-title title">
+								Bring everyone together to build better products.
+							</h1>
+							<p class="banner-text">
+								Manage makes it simple for software teams to plan day-to-day
+								tasks while keeping the larger team goals in view.
+							</p>
+							<a href="/" class="btn cta btn-primary">Get Started</a>
+						</div>
 					</div>
 				</div>
 			</div>
