slider for desktop screens

--- a/index.html
+++ b/index.html
@@ -187,7 +187,11 @@
 					</blockquote>
 
 					<!-- card 2 -->
-					<blockquote class="card slide" role="group" aria-label="slide 2 of 4">
+					<blockquote
+						class="card slide active"
+						role="group"
+						aria-label="slide 2 of 4"
+					>
 						<img src="./images/avatar-ali.png" alt="Ali" class="card-img" />
 						<h4 class="card-name">Ali Bravo</h4>
 						<p class="card-text">
@@ -198,7 +202,11 @@
 					</blockquote>
 
 					<!-- card 3 -->
-					<blockquote class="card slide" role="group" aria-label="slide 3 of 4">
+					<blockquote
+						class="card slide active"
+						role="group"
+						aria-label="slide 3 of 4"
+					>
 						<img
 							src="./images/avatar-richard.png"
 							alt="Richard"
