--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						>
 							<img src="images/avatar-anisha.png" alt="avatar anisha" />
 							<h3>Anisha Li</h3>
-							<p>
+							<p class="slider-text">
 								“Manage has supercharged our team’s workflow. The ability to
 								maintain visibility on larger milestones at all times keeps
 								everyone motivated.”
@@ -178,7 +178,7 @@
 						>
 							<img src="images/avatar-ali.png" alt="avatar ali" />
 							<h3>Ali Bravo</h3>
-							<p>
+							<p class="slider-text">
 								“We have been able to cancel so many other subscriptions since
 								using Manage. There is no more cross-channel confusion and
 								everyone is much more focused.”
@@ -192,7 +192,7 @@
 						>
 							<img src="images/avatar-richard.png" alt="avatar richard" />
 							<h3>Richard Watts</h3>
-							<p>
+							<p class="slider-text">
 								“Manage allows us to provide structure and process. It keeps us
 								organized and focused. I can’t stop recommending them to
 								everyone I talk to!”
@@ -206,7 +206,7 @@
 						>
 							<img src="images/avatar-shanai.png" alt="avatar shanai" />
 							<h3>Shanai Gough</h3>
-							<p>
+							<p class="slider-text">
 								“Their software allows us to track, manage and collaborate on
 								our projects from anywhere. It keeps the whole team in-sync
 								without being intrusive.”
@@ -281,7 +281,6 @@
 			</div>
 		</footer>
 
-		<script src="script/app.js"></script>
 		<!--
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
