--- a/index.html
+++ b/index.html
@@ -281,11 +281,13 @@
 			</div>
 		</footer>
 
-		<!--
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+		<div class="attribution">
+			Challenge by
+			<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+				>Frontend Mentor</a
+			>. Coded by <a href="https://twitter.com/_haris_shah">Haris</a> &
+			<a href="https://twitter.com/RMKcreative">Rachael</a>.
+		</div>
 
 		<script src="script/app.js"></script>
 	</body>
